@@ -16,6 +16,7 @@
 	* state machine now features states that may be implicitly skipped (= optional states)
 	* testsuite is now completely in testsuite/ and no longer in src/dlvhex/testsuite/
 	* added comfortable "text-only no-registry-ID-trouble" (and slow) plugin interface ComfortPluginInterface.hpp
+	* added static linking test for testsuite TestPlugin
 
 2010-11-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
